--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,14 @@ body {
 .flag-icon-background {
   height: 100%;
 }
+
+.jumbotron-cover-image {
+        position: relative;
+       background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('bball.jpg') center center;
+        width: 100%;
+      
+        height: 100%;
+        background-size: cover;
+        color: #fff;
+         text-shadow: 1px 1px #222;
+}
