--- a/style.css
+++ b/style.css
@@ -27,6 +27,14 @@ hr{
   border:1px solid;
 }
 
+.top {
+        
+        background: #000 url("bball.jpg") center center;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        color: #fff;
+}
 
 
 .tooltip { 
