--- a/style.css
+++ b/style.css
@@ -10,8 +10,11 @@ body {
   z-index: 3;
 }
 
+.bottom {
+}
+
 .container {
-  margin: auto;
+  margin: auto 0;
   text-align: center;
   max-width: 900px;
   background-color: #fff;
@@ -22,32 +25,30 @@ button.btn {
   margin: 1em;
 }
 
-hr{
-  color:red;
-  border:1px solid;
+hr {
+  color: red;
+  border: 1px solid;
 }
 
 .top {
-        
-        background: #000 url("bball.jpg") center center;
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        color: #fff;
+  background: #000 url("bball.jpg") center center;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  color: #fff;
 }
 
-
-.tooltip { 
-    position: absolute;     
-    text-align: center;     
-    width: 80px;          
-    height: 30px;         
-    padding: 2px;       
-    font: 12px sans-serif;    
-    background: white !important; 
-    border: 1px solid black;    
-    border-radius: 8px;     
-    pointer-events: none;
-    color:#000;
-    z-index:10 !important;     
+.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 80px;
+  height: 30px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: white !important;
+  border: 1px solid black;
+  border-radius: 8px;
+  pointer-events: none;
+  color: #000;
+  z-index: 10 !important;
 }
