--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,31 @@ svg{
 
 .jumbotron-cover-image {
         position: relative;
-       background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('bball.jpg') center center;
+      
         width: 100%;
       
         height: 100%;
         background-size: cover;
-        color: #fff;
-         text-shadow: 1px 1px #222;
+        color: #000;
+      
+}
+h1{
+  text-align: center;
+}
+
+footer{
+  margin:5rem 5rem;
+}
+
+.d3-tip {
+  line-height: 1.5;
+  padding: 6px;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  border-radius: 4px;
+  font-size: 12px;
+}
+
+circle{
+  cursor: pointer;
 }
