--- a/style.css
+++ b/style.css
@@ -31,24 +31,22 @@ hr {
 }
 
 .top {
-  background: #000 url("bball.jpg") center center;
+  background: #fff url("bball.jpg") center center;
   width: 100%;
   height: 100%;
   background-size: cover;
-  color: #fff;
+  color: #000;
 }
 
-.tooltip {
-  position: absolute;
-  text-align: center;
-  width: 80px;
-  height: 30px;
-  padding: 2px;
-  font: 12px sans-serif;
-  background: white !important;
-  border: 1px solid black;
-  border-radius: 8px;
-  pointer-events: none;
-  color: #000;
-  z-index: 10 !important;
+div.tooltip3 {	
+  position: absolute;			
+  text-align: center;			
+  width: 60px;					
+  height: 28px;					
+  padding: 2px;				
+  font: 12px sans-serif;		
+  background: lightsteelblue;	
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;			
 }
